# jinjacraft

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: jinjacraft.yml  release.yml
jinjacraft/: exceptions.py  main.py  model_generator.py  renderer.py  validator.py
tests/: data.json  data.yaml  reference_output.txt  template.jinja2  test_jinjacraft.py
