[tool.poetry]
name = "jinjacraft"
version = "1.0.0"
description = "Python command-line tool to generates text files based on Jinja2 template and YAML data file."
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
jinjacraft = "jinjacraft.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
